<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <ScrollView
        android:id="@+id/sv_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="22dp"
                android:text="@string/new_task"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_conclusion_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tv_title"
                android:layout_marginBottom="4dp"
                android:text="@string/date_conclusion"
                android:textColor="@color/colorLightGrey"
                android:textSize="12sp" />

            <LinearLayout
                android:id="@+id/ll_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tv_conclusion_date"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/sp_days"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/days_31" />

                <Spinner
                    android:id="@+id/sp_months"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginStart="4dp"
                    android:layout_weight="1"
                    android:entries="@array/months" />

                <Spinner
                    android:id="@+id/sp_years"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/years" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_dur_prio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/ll_date"
                android:layout_marginTop="22dp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/sp_duration"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1"
                    android:entries="@array/durations" />

                <Spinner
                    android:id="@+id/sp_priority"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/priorities" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/ll_dur_prio"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="22dp"
                android:text="@string/task"
                android:textColor="@color/colorLightGrey"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/et_task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tv_task"
                android:hint="@string/hint_task_inform"
                android:inputType="textMultiLine"
                android:maxLines="3" />
        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/bt_create_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/sv_container"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_round_corner"
        android:padding="8dp"
        android:text="@string/label_create_task"
        android:textColor="@android:color/white" />
</RelativeLayout>